[package]
name = "savetodisk"
version = "0.1.0"
edition = "2021"
author = ["visnkmr"]
homepage = "https://github.com/visnkmr/tns_daemon"
readme = "README.md"
keywords = [
    "netspeed",
    "overlay",
    "daemon",
    "bandwidth",
]
license = "MIT"
repository = "https://github.com/visnkmr/tns_daemon"
# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

# cargo-features = ["strip"]

[profile.release]
strip = true  # Automatically strip symbols from the binary.
opt-level = "z"
lto = true
panic = "abort"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
url="2.3.1"
chrono="0.4.24"
tiny_http="0.12.0"
serde_json="1.0.94"
markdown={git="https://github.com/wooorm/markdown-rs.git"}
regex="1.8.1"
# serde={version = "1.0.158", features = ["derive"]}
# regex="1.7.3"
prefstore = { git = "https://github.com/visnkmr/prefstore/" }
# prefstore="0.4.0"
# tera={version="1.18.1"}#, features=["serde"]}
# prefstore="0.2.0"

